--- a/style.css
+++ b/style.css
@@ -548,6 +548,7 @@ h6{
   border: none; /* Supprime la bordure */
   border-radius: 5px; /* Arrondi les coins du bouton */
   cursor: pointer; /* Curseur indiquant que le bouton est cliquable */
+  align-item: center;
 }
 
 /* Style lorsque le curseur survole le bouton */
