--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ html {
 body, ul {
   padding: 0;
   margin: 0;
-  width: 100%;
 }
 
 
@@ -243,7 +242,7 @@ a {
 
 .vehicules {
   width: 100%;
-  height: 300px;
+  height: auto;
   text-align: center;
 }
 
