--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body, ul {
 
 .titre{
     position: absolute;
-    left: 42%;
+    left: 40%;
     font-family: Playfair Display;
     font-weight: normal;
     font-size: 40px;
@@ -194,7 +194,7 @@ a {
 
 .collectionneur{
   height: 400px;
-  width: 100%; /* Largeur du cadre */
+  width: auto; /* Largeur du cadre */
   overflow: hidden; /* Pour cacher toute partie de l'image qui dépasse du cadre */
   position: relative; /* Utile si besoin de superposition */
   background-attachment: fixed; /* Image de fond reste fixe */
@@ -227,7 +227,7 @@ a {
   justify-content: center; /* Centrage horizontal */
   text-align: center;
   height: width;
-  width: 100%;
+  width: auto;
 }
 
 .context2{
@@ -283,7 +283,7 @@ a {
 .evenements {
   display: flex; 
   width: 100%;
-  height: 500px;
+  height: auto;
   text-align: center;
   background-color: #0D2123;
   color: white;
@@ -291,7 +291,7 @@ a {
 
 .Colonne2, .Colonne2-2 {
   width: 33.3%; /* Largeur du cadre */
-  height: 100%; /* Hauteur du cadre */
+  height: auto; /* Hauteur du cadre */
   display: flex; /* Active Flexbox sur chaque colonne */
   flex-direction: column; /* Aligne les éléments de haut en bas */
   justify-content: center; /* Centrage vertical */
@@ -304,7 +304,7 @@ a {
 
 .image-responsive {
   width: 100%; /* Pour remplir complètement la largeur du cadre */
-  height: 100%; /* Pour conserver les proportions de l'image */
+  height: auto; /* Pour conserver les proportions de l'image */
   object-fit: cover; /* Pour adapter l'image et couper ce qui dépasse en hauteur */
 }
 
