--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ a {
   background-size: cover; /* L'image couvre tout le bouton */
   background-position: center; /* Centre l'image */
   border: none; /* Enlève la bordure */
-  width: 75%; /* Ajustez selon vos besoins */
+  width: 80%; /* Ajustez selon vos besoins */
   height: 100px; /* Ajustez selon vos besoins */
   color: white; /* Couleur du texte */
   font-size: 30px; /* Taille du texte */
@@ -194,7 +194,7 @@ a {
 
 .collectionneur{
   height: 400px;
-  width: auto; /* Largeur du cadre */
+  width: 100%; /* Largeur du cadre */
   overflow: hidden; /* Pour cacher toute partie de l'image qui dépasse du cadre */
   position: relative; /* Utile si besoin de superposition */
   background-attachment: fixed; /* Image de fond reste fixe */
@@ -422,7 +422,7 @@ h6{
 }
 
 .product img {
-  width: 40%; /* Largeur des images */
+  width: 50%; /* Largeur des images */
   height: auto; /* Hauteur des images */
   object-fit: contain; /* Ajustement de l'image à l'intérieur du cadre */
 }
@@ -433,7 +433,7 @@ h6{
   justify-content: center; /* Centre les éléments horizontalement */
   align-items: center; /* Centre les éléments verticalement */
   text-align: center; /* Centre le texte à l'intérieur */
-  width: 60%; /* Prendre toute la largeur disponible */
+  width: 50%; /* Prendre toute la largeur disponible */
 }
 
 .bouton5 {
@@ -463,7 +463,7 @@ h6{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr; /* Deux colonnes égales */
   grid-gap: 5%; /* Espacement entre les éléments */
-  width: 80%; /* Largeur de la galerie */
+  width: 100%; /* Largeur de la galerie */
   margin: 0 auto; /* Centrage horizontal de la galerie */
    flex-wrap: wrap; /* Pour permettre le wrapping des colonnes */
 }
