--- a/style.css
+++ b/style.css
@@ -301,8 +301,8 @@ a {
 }
 
 .image-responsive {
-  width: auto; /* Pour remplir complètement la largeur du cadre */
-  height: 100%; /* Pour conserver les proportions de l'image */
+  width: 40%; /* Pour remplir complètement la largeur du cadre */
+  height: auto; /* Pour conserver les proportions de l'image */
   object-fit: cover; /* Pour adapter l'image et couper ce qui dépasse en hauteur */
 }
 
