--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ h6{
   display: flex;
   flex-direction: row;
   background-color: #faf9eb;
-  padding: 2%;
+  padding: 20px;
   height: width;
 }
 
