--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ body, ul {
 }
 
 .footer {
-  padding-top:20px;
+  padding-top:1.5rem;
 }
 
 .Logo{
   display: flex;
   align-items: center;  /* Aligne verticalement */
-  padding: 10px;
+  padding: 0.5rem;
 
 }
 .Logo img{
@@ -30,7 +30,7 @@ body, ul {
     position: absolute;
     font-family: Playfair Display;
     font-weight: normal;
-    font-size: 40px;
+    font-size: 2.5rem;
     left:15%;
 }
 
@@ -57,25 +57,25 @@ h1 {
 h2 {
   text-align: center;
   font-family: Playfair Display Bold;
-  font-size: 25px;
+  font-size: 1.5rem;
 }
 
 h4 {
   text-align: center;
   font-family: Playfair Display;
-  font-size: 40px;
+  font-size: 2.5rem;
 }
 
 p{
   text-align: center;
   font-family: Playfair Display;
-  font-size: 20px;
+  font-size: 1.5rem;
 }
 
 .copyright{
   text-align: center;
   font-family: Aptos;
-  font-size: 10px;
+  font-size: 0.5rem;
 }
 
 /* Style de base pour la barre de menu */
@@ -101,7 +101,7 @@ p{
   color: #450208; /* Couleur du texte des liens */
   font-family: arial black;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1rem;
   padding: width; /* Remplissage à l'intérieur des liens */
   display: inline-block; /* Permet de définir une largeur et une hauteur */
   position: relative;
@@ -126,12 +126,12 @@ p{
 }
 
 .bouton1, .bouton2 {
-  padding: 10px 20px; /* Remplissage à l'intérieur du bouton */
-  font-size: 16px; /* Taille de la police */
+  padding: 0.5rem 1.5rem; /* Remplissage à l'intérieur du bouton */
+  font-size: 1rem; /* Taille de la police */
   background-color: #5b5447; /* Couleur de fond du bouton */
   color: white; /* Couleur du texte du bouton */
   border: none; /* Supprime la bordure */
-  border-radius: 5px; /* Arrondi les coins du bouton */
+  border-radius: 0.5rem; /* Arrondi les coins du bouton */
   cursor: pointer; /* Curseur indiquant que le bouton est cliquable */
 }
 
@@ -158,7 +158,7 @@ a {
   width: 100%; /* Ajustez selon vos besoins */
   height: 100px; /* Ajustez selon vos besoins */
   color: white; /* Couleur du texte */
-  font-size: 30px; /* Taille du texte */
+  font-size: 2rem; /* Taille du texte */
   font-family: ARIAL;
   font-weight: normal;
   cursor: pointer; /* Indique que c'est cliquable */
@@ -195,7 +195,7 @@ a {
 }
 
 .collectionneur{
-  height: 400px;
+  height: 25rem;
   width: 100%; /* Largeur du cadre */
   overflow: hidden; /* Pour cacher toute partie de l'image qui dépasse du cadre */
   position: relative; /* Utile si besoin de superposition */
@@ -218,7 +218,7 @@ a {
   transform: translate(-50%, -50%); /* Pour centrer le texte */
   color: #faf9eb; 
   text-align: center; /* Alignement du texte */
-  font-size: 50px;
+  font-size: 3rem;
   font-family: Playfair Display;
   font-weight: lighter;
 }
@@ -285,7 +285,7 @@ a {
 .evenements {
   display: flex; 
   width: 100%;
-  height: 500px;
+  height: 30rem;
   text-align: center;
   background-color: #0D2123;
   color: white;
@@ -301,7 +301,7 @@ a {
   text-align: center; /* Centrage du texte */
   overflow: hidden; /* Pour cacher toute partie de l'image qui dépasse du cadre */
   position: relative; /* Utile si besoin de superposition */
-  padding: 0 70px; /* Ajoute une marge intérieure de 20px à gauche et à droite */
+  padding: 0 4rem; /* Ajoute une marge intérieure de 20px à gauche et à droite */
 }
 
 .image-responsive {
@@ -327,8 +327,8 @@ a {
 }
 
 .reseaux-sociaux img {
-  width: 50px;
-  height: 50px;
+  width: 3rem;
+  height: 3rem;
 }
 
 
@@ -375,12 +375,12 @@ a {
 }
 
 .bouton4 {
-  padding: 10px 20px; /* Remplissage à l'intérieur du bouton */
-  font-size: 16px; /* Taille de la police */
+  padding: 0.5rem 1rem; /* Remplissage à l'intérieur du bouton */
+  font-size: 1rem; /* Taille de la police */
   background-color: #5b5447; /* Couleur de fond du bouton */
   color: white; /* Couleur du texte du bouton */
   border: none; /* Supprime la bordure */
-  border-radius: 5px; /* Arrondi les coins du bouton */
+  border-radius: 0.5rem; /* Arrondi les coins du bouton */
   cursor: pointer; /* Curseur indiquant que le bouton est cliquable */
 }
 
@@ -392,7 +392,7 @@ a {
 h5 {
   text-align: center;
   font-family: Playfair Display;
-  font-size: 25px;
+  font-size: 1.5rem;
   color:black;
 }
 
@@ -400,7 +400,7 @@ h6{
   text-align: center;
   font-family: Playfair Display;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 1rem;
   color: black;
 }
 
@@ -409,7 +409,7 @@ h6{
 .gallery {
   display: grid;
   grid-template-columns: 1fr 1fr; /* Deux colonnes égales */
-  grid-gap: 5%; /* Espacement entre les éléments */
+  grid-gap: 2.5%; /* Espacement entre les éléments */
   width: 100%; /* Largeur de la galerie */
   margin: 0 auto; /* Centrage horizontal de la galerie */
    flex-wrap: wrap; /* Pour permettre le wrapping des colonnes */
@@ -439,12 +439,12 @@ h6{
 }
 
 .bouton5 {
-  padding: 10px 20px; /* Remplissage à l'intérieur du bouton */
-  font-size: 16px; /* Taille de la police */
+  padding: 0.5rem 1.5rem; /* Remplissage à l'intérieur du bouton */
+  font-size: 1rem; /* Taille de la police */
   background-color: #1b5f30; /* Couleur de fond du bouton */
   color: white; /* Couleur du texte du bouton */
   border: none; /* Supprime la bordure */
-  border-radius: 5px; /* Arrondi les coins du bouton */
+  border-radius: 0.5rem; /* Arrondi les coins du bouton */
   cursor: pointer; /* Curseur indiquant que le bouton est cliquable */
 }
 
@@ -464,7 +464,7 @@ h6{
 .gallery2 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr; /* Deux colonnes égales */
-  grid-gap: 5%; /* Espacement entre les éléments */
+  grid-gap: 2.5%; /* Espacement entre les éléments */
   width: 100%; /* Largeur de la galerie */
   margin: 0 auto; /* Centrage horizontal de la galerie */
    flex-wrap: wrap; /* Pour permettre le wrapping des colonnes */
@@ -506,36 +506,36 @@ h6{
           width: 50%;
           margin: 0 auto;
           background-color: white;
-          padding: 20px;
-          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-          margin-top: 50px;
-          border-radius: 8px;
+          padding: 1.5rem;
+          box-shadow: 0rem 0rem 0.5rem rgba(0, 0, 0, 0.1);
+          margin-top: 3rem;
+          border-radius: 0.5rem;
 
     }
         
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 1rem;
 }
 
 .checkbox-group {
-    margin-bottom: 15px;
+    margin-bottom: 1rem;
 }
 
 .checkbox-group label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 0.5rem;
 }
 
 .form-group label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 0.5rem;
 }
 .form-group input, 
 .form-group textarea {
     width: 100%; /* Ajustez cette valeur si vous souhaitez une taille différente */
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 0.1rem solid #ccc;
+    border-radius: 0.25rem;
     box-sizing: border-box; /* Assure que le padding soit inclus dans la taille totale de l'élément */
 }
 .form-group textarea {
@@ -543,12 +543,12 @@ h6{
 }
 
 .submit-btn {
-  padding: 10px 20px; /* Remplissage à l'intérieur du bouton */
-  font-size: 16px; /* Taille de la police */
+  padding: 0.5rem 1.5rem; /* Remplissage à l'intérieur du bouton */
+  font-size: 1rem; /* Taille de la police */
   background-color: #1b5f30; /* Couleur de fond du bouton */
   color: white; /* Couleur du texte du bouton */
   border: none; /* Supprime la bordure */
-  border-radius: 5px; /* Arrondi les coins du bouton */
+  border-radius: 0.5rem; /* Arrondi les coins du bouton */
   cursor: pointer; /* Curseur indiquant que le bouton est cliquable */
 }
 
