--- a/style.css
+++ b/style.css
@@ -508,6 +508,7 @@ h6{
 }
 .submit-btn {
   margin-top: 50px;
+  padding: 5px;
   font-size: 1rem; /* Taille de la police */
   background-color: #0b2f5b; /* Couleur de fond du bouton */
   color: white; /* Couleur du texte du bouton */
