--- a/style.css
+++ b/style.css
@@ -376,9 +376,10 @@ h6{
   display: inline-grid;
   grid-template-columns: 1fr; /* Deux colonnes égales */
   grid-gap: 1.5%; /* Espacement entre les éléments */
-  width: 100%;
+  width: 95%;
   justify-content: center; /* Centre les éléments horizontalement */
   align-items: center;
+  margin: 0 auto; /* Centrage horizontal de la galerie */
 }
 
 .product {
@@ -431,8 +432,8 @@ h6{
 .gallery2 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr; /* Deux colonnes égales */
-  grid-gap: 5%; /* Espacement entre les éléments */
-  width: 80%; /* Largeur de la galerie */
+  grid-gap: 1.5%; /* Espacement entre les éléments */
+  width: 95%; /* Largeur de la galerie */
   margin: 0 auto; /* Centrage horizontal de la galerie */
   flex-wrap: wrap; /* Pour permettre le wrapping des colonnes */
 }
@@ -442,7 +443,7 @@ h6{
   display: flex;
   flex-direction: column;
   align-items: center; /* Centre les enfants horizontalement */
-  background-color: #faf9eb;
+  background-color: #c3c7c3;
   padding-bottom: 10px;
   padding-top: 20px;
   height: 90%;
