--- a/style.css
+++ b/style.css
@@ -30,13 +30,6 @@ footer {
     width: 10%;
 }
 
-.titre{
-    position: absolute;
-    font-family: Playfair Display;
-    font-weight: normal;
-    font-size: 2.5rem;
-}
-
 .first-row{
   display: grid;
   flex-wrap: wrap;
@@ -50,7 +43,7 @@ footer {
 }
 
 h7{
-    position: absolute;
+    text-align: center;
     font-family: Playfair Display;
     font-weight: normal;
     font-size: 1rem;
