--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ footer {
   display: grid;
   flex-wrap: wrap;
   flex-direction: column;
-  grid-template-columns: auto 1fr; /* Deux colonnes égales */
+  grid-template-columwidth: 10% 90%; /* Deux colonnes égales */
   grid-gap: 1.5%; /* Espacement entre les éléments */
   width: 100%;
   justify-content: center; /* Centre les éléments horizontalement */
