--- a/style.css
+++ b/style.css
@@ -401,7 +401,7 @@ h6{
 .product {
   background-color: #c3c7c3;
   padding: 2%;
-  height: width×0.6;
+  height: 20rem;
   grid-template-columns: 1fr 1fr; /* Deux colonnes égales */
    display: grid;
 }
@@ -419,14 +419,12 @@ h6{
   align-items: center; /* Centre les éléments verticalement */
   text-align: center; /* Centre le texte à l'intérieur */
   width: 100%; /* Prendre toute la largeur disponible */
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr; /* Deux colonnes égales */
+  grid-template-rows: 4rem 4rem 4rem 4rem 4rem; /* Deux colonnes égales */
   display: grid;
 }
 
 .row1, .row2, .row3, .row4, .row5 {
   padding: 1.5rem;
-  width: 100%;
-  height: 100%;
 }
 
 .bouton5 {
