--- a/style.css
+++ b/style.css
@@ -77,10 +77,10 @@ h1 {
   }
 }
 
-h2, h3 {
+h2 {
   text-align: center;
   font-family: Playfair Display Bold;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 h4 {
@@ -92,7 +92,7 @@ h4 {
 p{
   text-align: center;
   font-family: Playfair Display;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 .copyright{
@@ -372,7 +372,7 @@ a {
 h5 {
   text-align: center;
   font-family: Playfair Display;
-  font-size: 0.5rem;
+  font-size: 1rem;
   color:black;
 }
 
