--- a/style.css
+++ b/style.css
@@ -428,14 +428,13 @@ h6{
 }
 
 .bouton5 {
-  padding: 10px 20px; /* Remplissage à l'intérieur du bouton */
+  padding: 1rem; /* Remplissage à l'intérieur du bouton */
   font-size: 1rem; /* Taille de la police */
   background-color: #0b2f5b; /* Couleur de fond du bouton */
   color: white; /* Couleur du texte du bouton */
   border-color: black;
   border-radius: 0.25rem; /* Arrondi les coins du bouton */
   cursor: pointer; /* Curseur indiquant que le bouton est cliquable */
-  padding: 1.5rem;
 }
 
 /* Style lorsque le curseur survole le bouton */
