--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ footer {
 .titre{
   display: grid;
   flex-wrap: wrap;
+  grid-template-rows: 70% 30%;
   flex-direction: row;
   width: 100%;
   justify-content: center; /* Centre les éléments horizontalement */
