--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ footer {
   display: grid;
   flex-wrap: flex;
   grid-template-columns: 15% 85%;
+  height: 10%;
   flex-direction: column;
   width: 100%;
   justify-content: center; /* Centre les éléments horizontalement */
@@ -44,7 +45,6 @@ footer {
 .titre{
   display: grid;
   flex-wrap: wrap;
-  grid-template-rows: 70% 30%;
   flex-direction: row;
   width: 100%;
   justify-content: center; /* Centre les éléments horizontalement */
@@ -409,7 +409,7 @@ h6{
 
 .product img {
   width: 100%; /* Largeur des images */
-  height: 20rem; /* Hauteur des images */
+  height: 50%; /* Hauteur des images */
   object-fit: contain; /* Ajustement de l'image à l'intérieur du cadre */
   justify-content: center;
 }
