--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ footer {
   flex-wrap: wrap;
   flex-direction: row;
   width: 100%;
-  height: 5%;
+  grid-template-rows: 60% 40%;
   justify-content: center; /* Centre les éléments horizontalement */
   align-items: center;
   margin: 0 auto; /* Centrage horizontal de la galerie */
